# Tim-C

./: .gitignore  CMakeLists.txt  Grammar.txt  LICENSE  README.md  generate-make.sh  generate-vs-2019.bat  main.cpp  out.asm  premake5.lua  test.asm  test.tc
TimC/: Grammar.txt
TimC/src/: Interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  nodes.cpp  nodes.h  parser.cpp  parser.h
compiler/: CMakeLists.txt  main.cpp
generation/: CMakeLists.txt
generation/include/generation/: architecture.h  assembly_program.h  generation_factory.h  igeneration.h
generation/src/: assembly_program.cpp  generation_factory.cpp  x64_generation.cpp  x64_generation.h
lexer/: CMakeLists.txt
lexer/include/: lexer.h  token.h  token_type.h
lexer/include/lexer/: lexer.h  token_type.h  unknown_token_exception.h
lexer/src/: lexer.cpp
parser/: CMakeLists.txt
parser/include/: parser.h
parser/include/parser/: parser.h  unexpected_token_exception.h
parser/include/parser/abstract_syntax_tree/: assignment_node.h  exit_node.h  function_declaration_node.h  identifier_node.h  number_node.h  program_node.h  scope_node.h  statement_node.h  type_node.h
parser/src/: parser.cpp  token_buffer.cpp  token_buffer.h
src/: interpreter.cpp  lexer.cpp  main.cpp  nodes.cpp  nodes.h
tests/: CMakeLists.txt
tests/generation_tests/: CMakeLists.txt  x64_generation_tests.cpp
tests/lexer_tests/: CMakeLists.txt  lexer_tests.cpp
tests/parser_tests/: CMakeLists.txt  parser_tests.cpp
